# zindex-scanner

./: .gitignore  Cargo.toml  README.md
src/: main.rs
